# t1

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc  CHANGELOG.md  MANIFEST.in  compose.yml  package-lock.json  package.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: commitlint.yml  pypi.yml  release.yml  test.yml
.husky/: pre-commit
requirements/: dev.txt
scripts/: build_and_upload_to_pypi  git_init  init_docs  push_to_github  test
scripts/lib/: htmlcov_link.py
